Fix vertical alignment of social media icons

--- a/styles/pages.css
+++ b/styles/pages.css
@@ -16,7 +16,7 @@ img {
 	margin-bottom:15px;
 }
 .middle {
-	vertical-align: middle;
+	vertical-align: text-bottom;
 }
 
 #MainArea {
